--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/_GridViewPartial_comprobante_detalle.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/_GridViewPartial_comprobante_detalle.cshtml
@@ -61,7 +61,7 @@
         settings.Columns.Add(column =>
         {
             column.FieldName = "IdGrupoPresupuesto";
-            column.Caption = "Grupo";
+            column.Caption = "Presupuesto";
             column.Width = Unit.Percentage(20);
             column.EditorProperties().ComboBox(p =>
             {
