--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Importar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Importar.cshtml
@@ -84,7 +84,7 @@
     <div id="Tabs" role="tabpanel">
         <ul class="nav nav-tabs" role="tablist">
             <li class="active">
-                <a href="#tab_categoria" aria-controls="vales" role="tab" data-toggle="tab">Categorización</a>
+                <a href="#tab_subgrupo" aria-controls="vales" role="tab" data-toggle="tab">Categorización</a>
             </li>
             <li>
                 <a href="#tab_presentacion" aria-controls="vales" role="tab" data-toggle="tab">Presentación</a>
@@ -98,7 +98,8 @@
         </ul>
         <div class="tab-content" style="padding-top: 20px">
 
-            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_subgrupo">
+            <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_subgrupo">
+
                 <div class="row">
                     <div class="col-md-12">
                         <div class="col-md-12">
