--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_GridViewPartial_MarcaPro_importacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_GridViewPartial_MarcaPro_importacion.cshtml
@@ -2,7 +2,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridViewPartial_MarcaPro_importacion";
-        settings.CallbackRouteValues = new { Controller = "ActivoFijo", Action = "GridViewPartial_MarcaPro_importacion" };
+        settings.CallbackRouteValues = new { Controller = "Producto", Action = "GridViewPartial_MarcaPro_importacion" };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdMarca";
         settings.Width = Unit.Percentage(100);
