--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_GridViewPartial_ProductoPro_importacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_GridViewPartial_ProductoPro_importacion.cshtml
@@ -2,7 +2,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridViewPartial_ProductoPro_importacion";
-        settings.CallbackRouteValues = new { Controller = "ActivoFijo", Action = "GridViewPartial_ProductoPro_importacion" };
+        settings.CallbackRouteValues = new { Controller = "Producto", Action = "GridViewPartial_ProductoPro_importacion" };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdProducto";
         settings.Width = Unit.Percentage(100);
@@ -49,6 +49,7 @@
                 e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
         };
         settings.Columns.Add("IdProducto", "ID").Width = Unit.Percentage(10);
+        settings.Columns.Add("pr_codigo", "Código").Width = Unit.Percentage(10);
         settings.Columns.Add("pr_descripcion", "Descripción").Width = Unit.Percentage(10);
         settings.Columns.Add("IdMarca", "Marca").Width = Unit.Percentage(10);
         settings.Columns.Add("IdPresentacion", "Presentación").Width = Unit.Percentage(10);
@@ -57,7 +58,8 @@
         settings.Columns.Add("IdGrupo", "Grupo").Width = Unit.Percentage(10);
         settings.Columns.Add("IdSubGrupo", "SubGrupo").Width = Unit.Percentage(10);
         settings.Columns.Add("IdCod_Impuesto_Iva", "Código impuesto Iva").Width = Unit.Percentage(10);
-        settings.Columns.Add("IdUnidadMedida", "Unidad de medida").Width = Unit.Percentage(10);
+        settings.Columns.Add("IdUnidadMedida", "Unidad de medida compra").Width = Unit.Percentage(10);
+        settings.Columns.Add("IdUnidadMedida_Consumo", "Unidad de medida Kardez").Width = Unit.Percentage(10);
 
         settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
