--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_GridViewPartial_SubgrupoPro_importacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_GridViewPartial_SubgrupoPro_importacion.cshtml
@@ -2,7 +2,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridViewPartial_SubgrupoPro_importacion";
-        settings.CallbackRouteValues = new { Controller = "ActivoFijo", Action = "GridViewPartial_SubgrupoPro_importacion" };
+        settings.CallbackRouteValues = new { Controller = "Producto", Action = "GridViewPartial_SubgrupoPro_importacion" };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdSubgrupo";
         settings.Width = Unit.Percentage(100);
@@ -55,7 +55,7 @@
         settings.Columns.Add("IdGrupo", "ID").Width = Unit.Percentage(15);
         settings.Columns.Add("NomGrupo", "Grupo").Width = Unit.Percentage(15);
         settings.Columns.Add("IdSubgrupo", "ID").Width = Unit.Percentage(15);
-        settings.Columns.Add("nom_Subgrupo", "Subgrupo").Width = Unit.Percentage(15);
+        settings.Columns.Add("nom_subgrupo", "Subgrupo").Width = Unit.Percentage(15);
 
         settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
